# OS

./: .gitignore
1/: lab1.txt
2/: CMakeLists.txt  RESULT.txt  background_process.cpp  background_process.h  readme.md  test_app.cpp
3/: CMakeLists.txt  counter.cpp  counter.h  main.cpp  readme.md
4/: CMakeLists.txt  logger.cpp  logger.h  main.cpp  readme.md  serial_port.cpp  serial_port.h
5/: app.py  logger.cpp  logger.h  main.cpp  readme.md  temperature_sensor.cpp
5-6/: readme.md  temperature_sensor.h
5/httplib/: httplib.h
6/: CMakeLists.txt  readme.md  temperature_monitor.pro
6/src/: logger.cpp  main.cpp
7/6/include/: logger.h  mainwindow.h
7/6/src/: mainwindow.cpp  plot.cpp  serial_port.cpp  temperature_sensor.cpp
7/include/: mainwindow.h  plot.h
7/src/: mainwindow.cpp
